# Ampere-Core

./: .gitmodules  Ampere.sln  CMakeLists.txt  README.md  package.json
platform/windows/: window.cpp  window.hpp
src/: Ampere.h  ampinc.cpp  ampinc.hpp
src/core/: app.cpp  app.hpp  core.hpp  log.cpp  log.hpp  window.hpp
src/events/: event.hpp  event_app.hpp  event_key.hpp  event_mouse.hpp  event_window.hpp
